--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    color: white;
+    color: rgb(94, 12, 247);
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(to right, #83a4d4, #b6fbff);
 }
@@ -13,7 +13,7 @@ span{
     transform:translate(-50%, -50%);
     padding: 15px;
     width: 50%;
-    background: black;
+    background: rgb(247, 177, 2);
     border-radius: 5px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
@@ -23,10 +23,10 @@ input{
     padding: 5px;
 }
 button{
-    color: rgb(76, 17, 224);
+    color: rgb(50, 11, 245);
     padding: 10px;
-    border: 2px solid rgb(110, 19, 229);
-    background: white;
+    border: 2px solid rgb(254, 254, 254);
+    background: rgb(78, 7, 245);
     display: block;
     margin-top: 10%;
     cursor: pointer;
